--- a/index.html
+++ b/index.html
@@ -206,20 +206,16 @@
                <h6 class="mt-3">Sosial Media</h6>
                <div class="d-flex justify-content-center gap-3 mt-2">
                  <!-- Instagram -->
-                 <a href="https://instagram.com/your_instagram" target="_blank" rel="noopener noreferrer" class="text-white" aria-label="Instagram">
+                 <a href="https://www.instagram.com/accounts/login/?next=%2Fdly.chairurrahman%2F&source=omni_redirect" target="_blank" rel="noopener noreferrer" class="text-white" aria-label="Instagram">
                    <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><path d="M17.5 6.5h.01"/></svg>
                  </a>
                  <!-- GitHub -->
-                 <a href="https://github.com/your_github" target="_blank" rel="noopener noreferrer" class="text-white" aria-label="GitHub">
+                 <a href="https://github.com/fadlychairurrahman" target="_blank" rel="noopener noreferrer" class="text-white" aria-label="GitHub">
                    <svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 .5C5.73.5.9 5.33.9 11.6c0 4.7 3.05 8.67 7.28 10.07.53.1.72-.23.72-.51 0-.25-.01-.92-.02-1.8-2.96.64-3.59-1.43-3.59-1.43-.49-1.24-1.2-1.57-1.2-1.57-.98-.67.07-.66.07-.66 1.08.08 1.65 1.11 1.65 1.11.96 1.65 2.52 1.17 3.13.9.1-.7.38-1.17.69-1.44-2.36-.27-4.84-1.18-4.84-5.23 0-1.15.41-2.08 1.08-2.81-.11-.27-.47-1.36.1-2.83 0 0 .88-.28 2.88 1.08a9.9 9.9 0 0 1 2.62-.35c.89 0 1.78.12 2.62.35 2-.36 2.88-1.08 2.88-1.08.57 1.47.21 2.56.1 2.83.67.73 1.08 1.66 1.08 2.81 0 4.06-2.49 4.95-4.86 5.21.39.34.73 1.02.73 2.06 0 1.49-.01 2.69-.01 3.06 0 .28.19.61.73.51 4.23-1.4 7.28-5.37 7.28-10.07C23.1 5.33 18.27.5 12 .5z"/></svg>
                  </a>
                  <!-- LinkedIn -->
-                 <a href="https://linkedin.com/in/your_linkedin" target="_blank" rel="noopener noreferrer" class="text-white" aria-label="LinkedIn">
+                 <a href="https://www.linkedin.com/in/fadly-chairurrahman-51b5b1280/" target="_blank" rel="noopener noreferrer" class="text-white" aria-label="LinkedIn">
                    <svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor"><path d="M4.98 3.5a2.5 2.5 0 1 1 .001 5.001A2.5 2.5 0 0 1 4.98 3.5zM3 9h4v12H3zM9 9h3.8v1.7h.1c.5-.9 1.8-1.7 3.7-1.7 4 0 4.7 2.6 4.7 6V21h-4v-5.2c0-1.2 0-2.8-1.7-2.8-1.7 0-2 1.4-2 2.7V21H9z"/></svg>
-                 </a>
-                 <!-- Twitter -->
-                 <a href="https://twitter.com/your_twitter" target="_blank" rel="noopener noreferrer" class="text-white" aria-label="Twitter">
-                   <svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53A4.48 4.48 0 0 0 22.43 2c-.88.52-1.85.88-2.88 1.08A4.48 4.48 0 0 0 12 6.5c0 .35.04.7.11 1.03C8.1 7.39 4.56 5.5 2.23 2.4a4.48 4.48 0 0 0-.6 2.25c0 1.55.79 2.92 2 3.72A4.48 4.48 0 0 1 2 8.5v.06c0 2.16 1.53 3.96 3.56 4.38-.37.1-.76.15-1.16.15-.28 0-.55-.03-.82-.08.55 1.73 2.15 2.99 4.05 3.03A9 9 0 0 1 1 19.54 12.7 12.7 0 0 0 7 21c8.29 0 12.83-6.86 12.83-12.82 0-.2 0-.41-.02-.61A9.2 9.2 0 0 0 23 3z"/></svg>
                  </a>
                </div>
              </div>
