--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </div>
         </div>
         <div class="col-md-5 hero-right">
-          <img src="img/m1.jpg" alt="Foto Fadly" class="avatar reveal">
+          <img src="img/profil.jpeg" alt="Foto Fadly" class="avatar reveal">
           <div class="mt-3 text-muted">Fadly • Web Developer • UI Enthusiast</div>
         </div>
       </div>
