perubahan bagian profile -2

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
         <div class="col-md-7 hero-left">
           <h6 class="section-heading">Hi, I’m</h6>
           <h1 class="display-4">Fadly Chairurrahman</h1>
-          <p class="lead">Mahasiswa Teknik Informatika — pengembang web & pencinta desain antar muka yang bersih dan fungsional.</p>
+          <p class="lead">Sarjana Komputer (S.kom)</p>
+          <p class="lead">Web Developer | Front-End Developer | UI Design</p>
           <div class="mt-4 hero-cta">
             <a href="#projects" class="btn btn-primary me-2">Lihat Proyek</a>
             <a href="#contact" class="btn btn-ghost">Hubungi Saya</a>
