perubahan pada about me

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
          </div>
          <div class="row justify-content-center fs-5 text-center">
            <div class="col-md-4">
-             <p>Saya adalah mahasiswa Teknik Informatika dengan minat di bidang pengembangan web dan pemrograman mobile.</p>
+             <p>Saya adalah lulusan Sarjana Komputer(S.kom) prodi Teknik Informatika dengan minat di bidang pengembangan web dan pemrograman mobile dan juga IT Support.</p>
            </div>
            <div class="col-md-4">
              <p>Ini adalah website portofolio saya yang menampilkan berbagai proyek yang pernah saya kerjakan.</p>
