--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div>
                   <h5 class="mb-1">Chatbot AI</h5>
-                  <p>Projek tugas kuliah: chatbot AI menggunakan Google Gemini API.</p>
+                  <p>Projek tugas kuliah chatbot AI menggunakan Google Gemini API.</p>
                   <div class="tag">AI • API • Developer</div>
                 </div>
                 <a href="https://chatbot-ai-fadlychr.up.railway.app/" class="btn btn-sm btn-primary">Lihat</a>
