perubahan pada about me

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <style>
       :root{
-        --primary:#4f46e5; /* indigo-600 */
+        --primary:#37bcec; /* indigo-600 */
         --accent: linear-gradient(90deg,#06b6d4,#4f46e5);
         --muted:#6b7280;
       }
