Update tambahan video portofolio

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           padding:28px;
           min-height:auto;
         }
-        /* stack CTA buttons and make full width on small screens */
+     
         .hero-cta{flex-direction:column;gap:10px;width:100%;}
         .hero-cta .btn{width:100%;display:block;}
         .hero-left{order:2;text-align:center;padding-top:10px;}
@@ -124,8 +124,6 @@
         .navbar-brand{font-size:1rem;}
         .container.jumbotron{padding-left:12px;padding-right:12px;border-radius:10px;}
       }
-
-      /* Minor adjustments for very small devices */
       @media (max-width: 420px) {
         .avatar{width:100px;height:100px;}
         .display-4{font-size:1.4rem;}
@@ -137,7 +135,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
        <div class="container">
-         <a class="navbar-brand" href="#">Fadly</a>
+         <a class="navbar-brand" href="#">Fadly Chairurrahman</a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-icon"></span>
          </button>
@@ -159,7 +157,7 @@
           <h6 class="section-heading">Hi, I’m</h6>
           <h1 class="display-4">Fadly Chairurrahman</h1>
           <p class="lead">Sarjana Komputer (S.kom)</p>
-          <p class="lead">Web Developer | Front-End Developer | UI Design</p>
+          <p class="lead">Web Developer | Front-End Developer | UI Design | IT Support | Video Editor</p>
           <div class="mt-4 hero-cta">
             <a href="#projects" class="btn btn-primary me-2">Lihat Proyek</a>
             <a href="#contact" class="btn btn-ghost">Hubungi Saya</a>
@@ -167,7 +165,7 @@
         </div>
         <div class="col-md-5 hero-right">
           <img src="img/profil.jpeg" alt="Foto Fadly" class="avatar reveal">
-          <div class="mt-3 text-muted">Fadly • Web Developer • UI Enthusiast</div>
+          <div class="mt-3 text-muted">• Front-End Developer • Web Developer <br> • UI Enthusiast • IT Support <br>• Video Editor</div>
         </div>
       </div>
     </section>
@@ -227,6 +225,44 @@
                 </div>
                 <a href="https://chatbot-ai-fadlychr.up.railway.app/" class="btn btn-sm btn-primary">Lihat</a>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Video Portfolio -->
+    <section id="video" class="container mt-4">
+      <div class="row mb-4 text-center">
+        <div class="col">
+          <h6 class="section-heading">Video</h6>
+          <h2>Portfolio Videos</h2>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-6 mb-4">
+          <div class="card p-3 text-center" style="background:rgba(255,255,255,0.02);border:1px solid rgba(255,255,255,0.03);">
+            <div class="ratio ratio-16x9">
+              <video controls>
+                <source src="video/Video Portofolio1.mp4" type="video/mp4">
+                Browser Anda tidak mendukung video.
+              </video>
+            </div>
+            <div class="mt-3">
+              <p class="mb-0">Video Portofolio 1 menggunakan Software Capcut dengan tema video untuk corporate</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 mb-4">
+          <div class="card p-3 text-center" style="background:rgba(255,255,255,0.02);border:1px solid rgba(255,255,255,0.03);">
+            <div class="ratio ratio-16x9">
+              <video controls>
+                <source src="video/Video Portofolio2.mp4" type="video/mp4">
+                Browser Anda tidak mendukung video.
+              </video>
+            </div>
+            <div class="mt-3">
+              <p class="mb-0">Video Portofolio 2 menggunakan Software Capcut dengan tema video cinematic</p>
             </div>
           </div>
         </div>
