perubahan pada video1

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
               </video>
             </div>
             <div class="mt-3">
-              <p class="mb-0">Video Portofolio 1 menggunakan Software Capcut dengan tema video untuk corporate</p>
+              <p class="mb-0">Video Portofolio 1 menggunakan Software Capcut dengan tema video untuk iklan</p>
             </div>
           </div>
         </div>
